# tikforge

./: Device Superlife.txt  LICENSE  README.md  pyproject.toml  pyproject.toml.bak  شغالة.txt
.github/workflows/: main.yml  publish.yml
tikforge/: __init__.py  devices.txt
